# api/docs/swagger.yaml
@@ -73,6 +73,7 @@ definitions:
         minLength: 2
         type: string
       gender:
+        default: male
         enum:
         - male
         - female
@@ -111,6 +112,15 @@ definitions:
       error:
         type: string
     type: object
+  models.GetAllCategoriesResponse:
+    properties:
+      categories:
+        items:
+          $ref: '#/definitions/models.Category'
+        type: array
+      count:
+        type: integer
+    type: object
   models.Like:
     properties:
       id:
@@ -142,6 +152,63 @@ definitions:
         type: integer
       views_count:
         type: integer
+    type: object
+  models.RegisterRequest:
+    properties:
+      email:
+        type: string
+      first_name:
+        maxLength: 30
+        minLength: 2
+        type: string
+      gender:
+        default: male
+        enum:
+        - male
+        - female
+        type: string
+      last_name:
+        maxLength: 30
+        minLength: 2
+        type: string
+      password:
+        maxLength: 16
+        minLength: 6
+        type: string
+      username:
+        maxLength: 30
+        minLength: 2
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - password
+    - username
+    type: object
+  models.RegisterResponse:
+    properties:
+      access_token:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      type:
+        type: string
+      username:
+        type: string
+    type: object
+  models.ResponseOK:
+    properties:
+      message:
+        type: string
     type: object
   models.User:
     properties:
@@ -175,24 +242,49 @@ info:
   title: Swagger for blog api
   version: "1.0"
 paths:
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a user
+      parameters:
+      - description: Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.RegisterResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Register a user
+      tags:
+      - auth
   /categories:
     get:
       consumes:
       - application/json
-      description: Get Category
+      description: Get all categories
       parameters:
-      - description: Limit
+      - default: 10
         in: query
         name: limit
         required: true
         type: integer
-      - description: Page
+      - default: 1
         in: query
         name: page
         required: true
         type: integer
-      - description: Search
-        in: query
+      - in: query
         name: search
         type: string
       produces:
@@ -201,12 +293,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Category'
+            $ref: '#/definitions/models.GetAllCategoriesResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Get Category
+      summary: Get all categories
       tags:
       - category
     post:
@@ -451,6 +543,31 @@ paths:
       summary: Update a comment
       tags:
       - comments
+  /file-upload:
+    post:
+      consumes:
+      - application/json
+      description: File upload
+      parameters:
+      - description: File
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ResponseOK'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: File upload
+      tags:
+      - file-upload
   /likes:
     get:
       consumes:
